--- a/src/components/forecast/styles/forecast.styles.scss
+++ b/src/components/forecast/styles/forecast.styles.scss
@@ -4,9 +4,17 @@
   align-items: center;
 }
 
+.icon {
+  width: 80px;
+}
+
 @media (max-width: 600px) {
   .mobile-text {
     font-size: 0.6rem !important;
     padding: 2px !important;
+  }
+
+  .icon {
+    width: 30px;
   }
 }
