--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,3 +4,19 @@
   padding: 2rem;
   text-align: center;
 }
+
+.img {
+  width: 80px;
+  height: 80px;
+}
+
+@media (max-width: 425px) {
+  .img {
+    width: 50px;
+    height: 50px;
+  }
+
+  .text {
+    font-size: 0.9rem !important;
+  }
+}
